--- a/style.css
+++ b/style.css
@@ -7,23 +7,23 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-video {
-    object-fit: cover;
+.video-container {
     position: absolute;
     top: 0;
-    left: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
-    filter: blur(5px);
-}
-.video-container {
-    width: 100%;
-    height: 100%;
-    position: absolute;
     overflow: hidden;
-    text-align: center;
-    display: flex;
-    justify-content: center;
+}
+.video-containter video {
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
 }
 body {
     height: 100vh;
@@ -51,7 +51,7 @@ body {
     left: 0;
     height: 36%;
     width: 100%;
-    border-radius: 23px 23px 0 0;
+    border-radius: 24px 24px 0 0;
     background-color: black;
 }
 .image {
