--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 370px;
-    width: 100%;
+    max-width: 100%;
+    height: auto;
     background: white;
     border-radius: 24px;
     padding: 25px;
