--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ body {
     transition: all 0.3s ease;
 }
 .buttons .button:hover {
-    background-color: #333;
+    background-color: #3d3d3d;
 }
 .profile-card .analytics {
     display: flex;
