--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     background: white;
     border-radius: 24px;
     padding: 25px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     position: relative;
 }
 .profile-card::before {
@@ -59,7 +59,7 @@ body {
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    background-color: black;
+    background-color: #006D75;
     padding: 3px;
     margin-bottom: 10px;
 }
