--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
 }
 
 .profile-card {
-        animation: 3.5s ease fade-in-down, 3s ease-in-out 6s infinite floating;
+        animation: 2.5s ease fade-in-down, 0.1s ease-in-out 5s 2 tilt-shaking;
     }
 
 @keyframes fade-in-down {
@@ -157,9 +157,11 @@ body {
         }
     }
 
-@keyframes floating {
-        0% { transform: translate(0, 0px); }
-        50% { transform: translate(0, 10px); }
-        100% { transform: translate(0, -0px); }
+@keyframes tilt-shaking {
+        0% { transform: rotate(0, 0deg); }
+        25% { transform: rotate(5deg); }
+        50% { transform: rotate(0, 0px); }
+        75% { transform: rotate(-5deg); }
+        100% { transform: rotate(0, 0deg); }
     }
 
